results object shows up in console, need to display on page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,7 @@
 <h1>OMDB Movie Search</h1>
 <p>Search for a movie below...</p>
+
+<form method="GET" action ="/results">
+    <input type="text" id="q" placeholder="enter your search..." name = "q"/>
+    <input type="submit"/>
+</form>
