rewatch axios lecture

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,12 +1,6 @@
 <% // Render your search results here %>
 <% // This is how to do comments in EJS, by the way... %>
 
-<% results.forEach(result => { %>
-   
-   
-    <p><%= result %></p>
-   
+<h1><%= results %></h1>
 
-   <% }) %>
 
-  
